--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --rs --cls --ignore-watch node_modules src/server.ts"
+    "dev": "ts-node-dev --rs --cls --ignore-watch node_modules src/server.ts",
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,8 @@
     "pg": "^8.11.0",
     "reflect-metadata": "^0.1.13",
     "ts-node-dev": "^2.0.0",
-    "typeorm": "^0.3.16"
+    "typeorm": "^0.3.16",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.17"
