--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --rs --cls --ignore-watch node_modules src/server.ts",
-    "typeorm": "typeorm-ts-node-commonjs"
-  },
+    "typeorm": "typeorm-ts-node-commonjs",
+    "typeorm:revert-migration": "npm run typeorm -- -d ./src/data-source.ts migration:revert",
+    "typeorm:run-migrations": "npm run typeorm migration:run -- -d ./src/data-source.ts"
+    },
   "keywords": [],
   "author": "",
   "license": "ISC",
